@@ -2,6 +2,8 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2005, PHP 5.1
 - Fixed bug #33917 (number_format() output with > 1 char separators). (Jani)
+- Fixed bug #33899 (CLI: setting extension_dir=some/path extension=foobar.so
+  does not work). (Jani)
 - Fixed bug #33882 (CLI was looking for php.ini in wrong path). (Hartmut)
 - Fixed bug #33869 (strtotime() problem with "+1days" format). (Ilia) 
 - Fixed bug #33841 (pdo sqlite driver forgets to update affected column count
